# dir-permission-watcher

./: .config  Cargo.toml  Makefile.toml  README.md
src/: main.rs
