[package]
name = "dir-permission-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde ={version = "1.0.214", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] }
notify = "5.2.0"
serde_json = "1.0.132"
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"
